RAP396: - removed props from Victory/Defeat routes - fixed quote render on API - added margin top to avatarContainerWrapper on Game.tsx - added difficulty to Victory/Defeat pages - added TODO comment to hero hooks - added comments to hero hook/slice and opponent slice - added max-width for option button to stay same width when text is wrapped

--- a/src/pages/Game.scss
+++ b/src/pages/Game.scss
@@ -5,6 +5,7 @@
 .avatarContainerWrapper {
   display: flex;
   justify-content: space-between;
+  margin-top: 1rem;
 }
 
 .avatarActionGroup {
