--- a/src/styles/base/buttons.scss
+++ b/src/styles/base/buttons.scss
@@ -125,6 +125,7 @@
   &.m {
     height: 40px;
     min-width: 370px;
+    max-width: 370px;
     font-size: 18px;
     letter-spacing: -0.64px;
     line-height: 22px;
